@@ -316,11 +316,15 @@ def set_quaran(cer_ou_tab):
     for k in cer_ou_tab.keys():
         ous.clear()
         ous.find(k)
+        start_date = time.strftime("%Y-%m-%d")
+        print "start date:%s" % start_date
+        logger.debug("quarantine old OU:%s" % k)
         if (ous.get_entity_quarantine(qtype=co.quarantine_ou_notvalid) == []):
+            logger.debug("Add quarantine for:%s" % ous.entity_id)
             ous.add_entity_quarantine(co.quarantine_ou_notvalid,
                                       acc.entity_id,
                                       description='import_OU',
-                                      start = now) 
+                                      start = start_date) 
     db.commit()
 # end set_quaran
 
